# Learnhub-backend

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: unittest.yaml
learnhub_backend/: config.py  database.py  dependencies.py  main.py
learnhub_backend/program/: config.py  database.py  dependencies.py  exceptions.py  router.py  schemas.py  services.py
learnhub_backend/program/announcements/: database.py  router.py  services.py
learnhub_backend/program/classes/: database.py  router.py  schemas.py  services.py
learnhub_backend/program/classes/assignment/: config.py  database.py  router.py  schemas.py  services.py
learnhub_backend/program/course/: database.py  router.py  schemas.py  services.py
learnhub_backend/program/course/announcements/: database.py  router.py  schemas.py  services.py
learnhub_backend/quiz/: database.py  router.py  schemas.py  services.py
learnhub_backend/student/: config.py  database.py  router.py  schemas.py  services.py
learnhub_backend/student/dashboard/: database.py  router.py  schemas.py  services.py
learnhub_backend/student/wishlist/: database.py  router.py  schemas.py  services.py
learnhub_backend/teacher/: database.py  dependencies.py  router.py  schemas.py  services.py
learnhub_backend/teacher/dashboard/: database.py  router.py  schemas.py  services.py
learnhub_backend/transaction/: database.py  router.py  schemas.py  services.py
tests/: test_read_root.py
