[tool.poetry]
name = "learnhub-backend"
version = "0.1.0"
description = ""
authors = ["Nhuengzii <32nhueng@gmail.com>"]
readme = "README.md"
packages = [{ include = "learnhub_backend" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
httpx = "^0.24.1"
fastapi = "^0.100.1"
pymongo = "^4.4.1"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "learnhub_backend.main:start_dev_server"
